--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
   <div>
 
-    <h1>Gitment GitblogComment</h1>
+    <h1>GitblogComment</h1>
 
-    <p>This is the demo page for <a href="https://github.com/imsun/gitment" target="_blank">Gitment</a>.</p>
+    <p>This is a message board.</p>
 
-    <p>You can login with GitHub and leave your comments below.</p>
+    <p>You can login with GitHub and leave your message below.</p>
 
   </div>
 
